src/main/scala/lexer/ebnf.txt
<ast> ::= (<statement>)+

<statement> ::= "piece" <stringLiteral> "(" <id> ")" "with" "[" (<action> ",")* <action> "]"
                | "board" <board>
                | "action" <stringLiteral> <actionDef>


<action> ::= <actionDef>
            | <stringLiteral>

<actionDef> ::= <identifier> ":" identifierWithOptions [ "if" "[" (<identifierWithOptions> ",")* <identifierWithOptions>]

<identifierWithOptions> ::= <identifier> "(" (<keyValue>)+ ")"
                            | <identifier>

<keyValue> ::= <identifier> "=" <stringLiteral>


<board> ::= (<rank>)+

<rank> ::= "|" (<id> "|")+ "|"

<square> ::= <id> | "_"
